@@ -8,9 +8,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>23.0.1</javafx.version>
+        <javafx.version>17.0.13</javafx.version>
     </properties>
 
     <dependencies>
@@ -114,7 +114,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <release>21</release>
+                    <release>17</release>`n                    <compilerArgs>`n                        <arg>--enable-preview</arg>`n                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -129,3 +129,4 @@
     </build>
 
 </project>
+
